--- a/platform/commonUI/general/res/sass/mobile/_mixins.scss
+++ b/platform/commonUI/general/res/sass/mobile/_mixins.scss
@@ -92,4 +92,5 @@
 @mixin slMenuTransitions {
     @include transition-duration(.35s);
     transition-timing-function: ease;
+    backface-visibility: hidden;
 }
